Feb 21, 2008
cube.solid.random() was updated. One entrie was added and a maximum point output was inserted.
sphere.hollow() and sphere.solid.random() were updated.  An entrie was added to the functions and sphere.solid.random() now uses sphere.hollow.






Feb 19, 2008
Functions were renamed to match the up coming paper on Geo Zoo.
Split mobius function into mobius and mobius.experiment.  Updates will come.


cube.iterate() <- cube()
cube.solid.grid() <- cube.solid.eq()
cube.solid.random <- cube.solid()
sphere.hollow() <- sphere()
sphere.solid.grid() <- sphere.solid.eq()
sphere.solid.random() <- sphere.solid()


