@@ -1,8 +1,6 @@
+library(rggobi)
+
 ggobi.geozoo <- function(data, ...) {
-  if (!require("rggobi")) {
-    stop("rggobi package not available")
-  }
-  
 	gg <- ggobi(data$points)
 	glyph_colour(gg[1]) <- 6
 	glyph_size(gg[1]) <- 3
@@ -17,4 +15,24 @@ ggobi.geozoo <- function(data, ...) {
 	
 	invisible(gg)
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
