@@ -14,13 +14,14 @@ cross.cap(n = 10000)
   \item{points }{location of points}
   \item{edges }{edges of the object (null)}
 }
-\references{ \url{http://www.ggobi.org/packages/geozoo} }
+\references{ \url{http://streaming.stat.iastate.edu/~dicook/geometric-data/mobius/other/} }
 \author{ Barret Schloerke }
 \examples{
 ## Generates a Cross Cap
-cross.cap( n = 10000 )
+cross.cap( n = 1000 )
 
+\dontrun{
 ## Through rggobi
 ggobi(cross.cap(n = 10000))
-}
+}}
 \keyword{ dynamic }
