@@ -14,13 +14,14 @@ cube.face(p = 3)
   \item{points }{location of points}
   \item{edges }{edges of the object}
 }
-\references{ \url{http://www.ggobi.org/packages/geozoo} }
+\references{ \url{http://streaming.stat.iastate.edu/~dicook/geometric-data/cube/} }
 \author{ Barret Schloerke }
 \examples{
 ## Generates a cube with points on its face
 cube.face(p = 3)
 
+\dontrun{
 ## Through rggobi
 ggobi(cube.face(p = 3))
-}
+}}
 \keyword{ dynamic }
