@@ -16,13 +16,14 @@ enneper.surface(n = 10000, a = 4)
   \item{points }{location of points}
   \item{edges }{edges of the object}
 }
-\references{ \url{http://www.ggobi.org/packages/geozoo} }
+\references{ \url{http://streaming.stat.iastate.edu/~dicook/geometric-data/mobius/other/} }
 \author{ Barret Schloerke }
 \examples{
 ## Generates an Enneper Surface
-enneper.surface(n = 10000, a = 4)
+enneper.surface(n = 1000, a = 4)
 
+\dontrun{
 ## Through rggobi
 ggobi(enneper.surface(n = 10000, a = 4))
-}
+}}
 \keyword{ dynamic }
