@@ -5,18 +5,20 @@
 A function to generate a mobius strip in the third or fourth dimension.
 }
 \usage{
-mobius(n = 10000)
+mobius(p=3, n = 10000)
 }
 \arguments{
+  \item{p}{ dimension of object.  (3) }
   \item{n}{ number of points }
 }
-\references{ \url{http://www.ggobi.org/packages/geozoo} }
+\references{ \url{http://streaming.stat.iastate.edu/~dicook/geometric-data/mobius/mobius/} }
 \author{ Barret Schloerke }
 \examples{
 ## Generates a mobius strip.
-mobius( n = 10000)
+mobius(3, n = 1000)
 
+\dontrun{
 ## Through rggobi
-ggobi(mobius( n = 10000))
-}
+ggobi(mobius(3, n = 10000))
+}}
 \keyword{ dynamic }
