@@ -11,13 +11,14 @@ mobius.experiment(p=5, n = 10000)
   \item{p}{ dimension of object.  (5) }
   \item{n}{ number of points }
 }
-\references{ \url{http://www.ggobi.org/packages/geozoo} }
+\references{ \url{http://streaming.stat.iastate.edu/~dicook/geometric-data/mobius/mobius/} }
 \author{ Barret Schloerke }
 \examples{
 ## Generates a mobius strip.
-mobius.experiment(5, n = 10000)
+mobius.experiment(5, n = 1000)
 
+\dontrun{
 ## Through rggobi
 ggobi(mobius.experiment(5, n = 10000))
-}
+}}
 \keyword{ dynamic }
