@@ -12,13 +12,14 @@ roman.surface(n = 10000, a = 1)
   \item{n}{ number of points }
   \item{a}{ maximum radius of object }
 }
-\references{ \url{http://www.ggobi.org/packages/geozoo} }
+\references{ \url{http://streaming.stat.iastate.edu/~dicook/geometric-data/mobius/other/} }
 \author{ Barret Schloerke }
 \examples{
 ## Generates a Roman surface.
-roman.surface(n = 10000, a = 1)
+roman.surface(n = 1000, a = 1)
 
+\dontrun{
 ## Through rggobi
 ggobi(roman.surface(n = 10000, a = 1))
-}
+}}
 \keyword{ dynamic }
