@@ -11,13 +11,14 @@ torus.flat(p = 4, n = 10000)
   \item{p}{ dimension of object.  (number of circles x2) }
   \item{n}{ number of points }
 }
-\references{ \url{http://www.ggobi.org/packages/geozoo} }
+\references{ \url{http://streaming.stat.iastate.edu/~dicook/geometric-data/mobius/torus/} }
 \author{ Barret Schloerke }
 \examples{
 ## Generates a Flat Torus.
-torus <- torus.flat(p = 4, n = 10000)
+torus <- torus.flat(p = 4, n = 1000)
 
+\dontrun{
 ## Through rggobi
 ggobi(torus.flat(p = 6, n = 10000))
-}
+}}
 \keyword{ dynamic }
